--- a/alter_app/contacts.html
+++ b/alter_app/contacts.html
@@ -25,7 +25,7 @@
             <h1 class="logo_header__h1">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
     </div>
-    <div class="wrapper_nav is-size-4">
+    <div class="wrapper_nav is-size-4-desktop is-size-4-fullhd is-5-tablet is-5-mobile">
         <nav class="navigation navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="psy_nav">
@@ -58,6 +58,8 @@
         </nav>
     </div>
     
+
+
 
 
     <!-- здесь начинается меняющийся контент -->
@@ -129,7 +131,7 @@
                 <iframe
                     src="https://yandex.ru/map-widget/v1/?um=constructor%3A39a350423f98fbc4417a6c1fff02949b752fa3d557f94b4a755f0324a7bce17d&amp;source=constructor"
                     width="400" height="503" frameborder="0"></iframe></div>
-            <div class="kont_adress__map__text column is-size-5-desktop">
+            <div class="kont_adress__map__text column is-size-5">
                 <p class="psy_in_our_life__p">
                     Данный кабинет располагается в психологическом центре «Мастерская жизни» в 1-й минуте ходьбы от
                     станции метро Красные Ворота и в 4-х минутах пешком от станций метро Тургеневская, Чистые Пруды,
@@ -192,7 +194,6 @@
                         </span>
                     </div>
             </div>
-            <!-- <div class="is-one-fifth column"></div> -->
             <div class="column is-5 ">
                 <textarea class="textarea is-medium" name="message" id="texta" rows="6" cols="40"
                     placeholder="Тема обращения" required></textarea>
