--- a/alter_app/method.html
+++ b/alter_app/method.html
@@ -155,7 +155,7 @@
     <div class="columns wrapper_method_fifth is-size-5-desktop is-centered">
         <div class="column">
 
-            <h5 class="method_wrapper_fourth__h5 is-size-4-desktop ">
+            <h5 class="method_wrapper_fourth__h5 is-size-4 is-text-centered">
                 Несколько причин, по которым вам нужно выбрать именно когнитивно-поведенческий
                 подход в психотерапии:
             </h5>
