--- a/alter_app/psychotherapy.html
+++ b/alter_app/psychotherapy.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="сайт психолога Натальи Чижиковой">
-    <meta name="keywords"
-        content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
+    <meta name="keywords" content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
     <meta name="author" content="Наталья Чижикова">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -18,7 +16,6 @@
     <script src="js/mag.js" defer></script>
     <script src="js/code.js" defer></script>
 </head>
-
 <body>
     <div class="columns">
         <div class="logo_header column">
@@ -28,11 +25,10 @@
             <h1 class="logo_header__h1">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
     </div>
-    <div class="wrapper_nav is-size-4">
+    <div class="wrapper_nav is-size-4-desktop is-size-4-fullhd is-5-tablet is-5-mobile">
         <nav class="navigation navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-                    data-target="psy_nav">
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="psy_nav">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -61,6 +57,8 @@
             </div>
         </nav>
     </div>
+    
+
 
 
 
