--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -25,7 +25,7 @@
             <h1 class="logo_header__h1">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
     </div>
-    <div class="wrapper_nav is-size-4">
+    <div class="wrapper_nav is-size-4-desktop is-size-4-fullhd is-5-tablet is-5-mobile">
         <nav class="navigation navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="psy_nav">
