--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -104,9 +104,9 @@
         <div class="wrapper_reasons_to_me__card column">
             <div class="card_img dark"></div>
             <div class="wrapper_reasons_to_me_text__p">
-                <div>Трудности с построением близких и доверительных отношений; </div>
-                <div>Эмоциональная зависимость; </div>
-                <div>Болезненный разрыв отношений. </div>
+                <div>Депрессивные состояния;</div>
+                <div>Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);</div>
+                <div>Панические атаки.s </div>
             </div>
         </div>
         <div class="wrapper_reasons_to_me__card column">
@@ -118,7 +118,7 @@
                 <div>Болезненный разрыв отношений. </div>
             </div>
 
-        </div>
+        </div>  
         <div class="wrapper_reasons_to_me__card column">
             <div class="card_img main_girls"></div>
             <div class="wrapper_reasons_to_me_text__p">
