--- a/alter_app/contacts.html
+++ b/alter_app/contacts.html
@@ -152,7 +152,7 @@
                         n.chizhikova25@gmail.com
                     </div>
                     <div class="conts_wrap"> <span class="conts__span">Время работы:</span>
-                       >ежедневно, с 11:00 до 21:00
+                       ежедневно, с 11:00 до 21:00
                     </div>
                     <div class="conts_wrap"> <span class="conts__span">Координаты для навигатора: </span>
                        55.768248, 37.644746
