--- a/alter_app/materials.html
+++ b/alter_app/materials.html
@@ -63,7 +63,7 @@
 
     <!-- здесь начинается меняющийся контент -->
     <div class="columns">
-        <div class="second_nav column is-size-4-desktop">
+        <div class="second_nav column is-size-4-desktop is-size-8-tablet is-size-8-mobile">
             <ul>
                 <li><a href="#depression">Депрессия</a></li>
                 <li><a href="#anxious">Тревожные расстройства</a></li>
