--- a/alter_app/about.html
+++ b/alter_app/about.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif|Playfair+Display" rel="stylesheet">
+    <link rel="stylesheet" href="css/mag.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js" defer></script>
     <script src="js/mag.js" defer></script>
@@ -136,7 +137,7 @@
             <p class="academic__p"><span class="academic_span is-size-4">2018</span>— МПГУ (бывш. МГПИ им. В. И. Ленина),
                 специальность «Организационная психология»,
                 (квалификация магистр психологии)</p>
-            <p class="academic__p"><span class="academic_spanis-size-4">2016 </span>— участник проекта «Студенческая наука»
+            <p class="academic__p"><span class="academic_span is-size-4">2016 </span>— участник проекта «Студенческая наука»
                 (2016)</p>
             <p class="academic__p"><span class="academic_span is-size-4">2016 - 2017</span>— участник Международной научной
                 конференции студентов, аспирантов и молодых учёных «Ломоносов-2017» (МГУ)</p>
@@ -153,20 +154,20 @@
                 — Общероссийская профессиональная психотерапевтическая лига, Базовый курс ДПДГ-терапии — 36 часов
             </p>
             <p class="academic__p">
-                <span class="academic_span is-size-4">2018 </span>>
+                <span class="academic_span is-size-4">2018 </span>
                 — Ассоциация когнитивно-поведенческой психотерапии, курс CBT - терапии Дмитрия Викторовича Ковпака — 200
                 часов
             </p>
             <p class="academic__p">
-                <span class="academic_span is-size-4">2018 - н. вр.</span>>
+                <span class="academic_span is-size-4">2018 - н. вр.</span>
                 — участие в групповых очных интервизиях в Ассоциации когнитивно-поведенческой психотерапии — 25 часов
             </p>
             <p class="academic__p">
-                <span class="academic_span is-size-4">2018 - н. вр.</span>>
+                <span class="academic_span is-size-4">2018 - н. вр.</span>
                 — участие в групповых и индивидуальных супервизиях у Дмитрия Викторовича Ковпака — 20 часов
             </p>
             <p class="academic__p">
-                <span class="academic_span is-size-4">2018 - н. вр. </span>>
+                <span class="academic_span is-size-4">2018 - н. вр. </span>
                 — участие в ежегодных конференциях Ассоциации когнитивно-поведенческой психотерапии — 100 часов
             </p>
 
@@ -250,7 +251,7 @@
             </div>
         </div>
 
-        <div class="row_img columns is-centered">
+        <div class="academic_wrapper row_img columns is-centered">
             <div class="row_img__first column">
                 <a href="img\od\lomonosov_2016.jpeg" class="psy_img">
                     <div class="img_wp fr-7"></div>
