--- a/alter_app/contacts.html
+++ b/alter_app/contacts.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="сайт психолога Натальи Чижиковой">
-    <meta name="keywords" content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
+    <meta name="keywords"
+        content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
     <meta name="author" content="Наталья Чижикова">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,6 +18,7 @@
     <script src="js/mag.js" defer></script>
     <script src="js/code.js" defer></script>
 </head>
+
 <body>
     <div class="columns">
         <div class="logo_header column">
@@ -28,7 +31,8 @@
     <div class="wrapper_nav is-size-4-desktop is-size-4-fullhd is-5-tablet is-5-mobile">
         <nav class="navigation navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="psy_nav">
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                    data-target="psy_nav">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -57,7 +61,7 @@
             </div>
         </nav>
     </div>
-    
+
 
 
 
@@ -66,7 +70,8 @@
 
     <div class="first_contact columns is-size-5-desktop is-centered">
         <div class="column">
-            <h3 class="psy_in_our_life__h3 psy_in_our_life__h3_cont  is-size-3-desktop is-centered title column">Как проходит первый сеанс?</h3>
+            <h3 class="psy_in_our_life__h3 psy_in_our_life__h3_cont  is-size-3-desktop is-centered title column">Как
+                проходит первый сеанс?</h3>
             <p class="psy_in_our_life__p">
                 Первая встреча — это всегда знакомство. Обычно я рекомендую новым клиентам перед первой встречей
                 подумать,
@@ -83,21 +88,20 @@
     </div>
 
 
-    <div class="second_part_one">
-        <h3 class="psy_in_our_life__h3  centr title is-centred is-4-desktop" >
-            Формат консультаций
-        </h3>
-        <p class="psy_in_our_life__p psy_in_our_life__p__spec  centr subtitle">
-            На данный момент я провожу консультации как очно, так и по Skype.
-        </p>
-        <h5 class="psy_in_our_life__p centr subtitle  psy_in_our_life__h5_second">
-            Считаю ли я эффективной психотерапевтическую работу по Skype?
-        </h5>
-    </div>
-    <div class="second_contact  columns">
+
+    <div class="second_contact  columns ">
         <div class="second_contact__img second_contact_lap column "></div>
 
         <div class="second_part_second column is-size-5 is-half">
+            <h3 class="psy_in_our_life__h3 centr title is-centred is-4-desktop">
+                Формат консультаций
+            </h3>
+            <p class="psy_in_our_life__p psy_in_our_life__p__spec   subtitle">
+                На данный момент я провожу консультации как очно, так и по Skype.
+            </p>
+            <h5 class="psy_in_our_life__p psy_in_our_life__p__spec   subtitled">
+                Считаю ли я эффективной психотерапевтическую работу по Skype?
+            </h5>
             <p class="psy_in_our_life__p">Психотерапия — процесс живого общения, однако в век технологий
                 и инноваций было бы глупо отказываться от возможности делать
                 привычные вещи в онлайн-формате.</p>
@@ -116,53 +120,55 @@
 
     <div class="kont_adress columns ">
         <div class="column is-size-5-desktop">
-        <h5 class="kont_adress__h5 centr title is-centred is-4-desktop"> Кабинет на Красных Воротах </h5>
-        <p class="psy_in_our_life__p ">Мы можем встретиться с вами в моём кабинете на Красных Воротах в предварительно
-            оговорённое время. Это
-            уютный кабинет, в котором вы точно будете чувствовать себя комфортно и безопасно.</p>
-        <p class="psy_in_our_life__p">
-            Записаться на очную консультацию вы можете через форму ниже, а также по телефону или e-mail (указав в теме
-            письма «консультация»).
-        </p>
+            <h5 class="kont_adress__h5 centr title is-centred is-4-desktop"> Кабинет на Красных Воротах </h5>
+            <p class="psy_in_our_life__p ">Мы можем встретиться с вами в моём кабинете на Красных Воротах в
+                предварительно
+                оговорённое время. Это
+                уютный кабинет, в котором вы точно будете чувствовать себя комфортно и безопасно.</p>
+            <p class="psy_in_our_life__p">
+                Записаться на очную консультацию вы можете через форму ниже, а также по телефону или e-mail (указав в
+                теме
+                письма «консультация»).
+            </p>
+        </div>
     </div>
-</div>
-        <div class="kont_adress__map columns">
-            <div class="kont_adress__map_wrap column ">
-                <iframe
-                    src="https://yandex.ru/map-widget/v1/?um=constructor%3A39a350423f98fbc4417a6c1fff02949b752fa3d557f94b4a755f0324a7bce17d&amp;source=constructor"
-                    width="400" height="503" frameborder="0"></iframe></div>
-            <div class="kont_adress__map__text column is-size-5">
-                <p class="psy_in_our_life__p">
-                    Данный кабинет располагается в психологическом центре «Мастерская жизни» в 1-й минуте ходьбы от
-                    станции метро Красные Ворота и в 4-х минутах пешком от станций метро Тургеневская, Чистые Пруды,
-                    Сретенский Бульвар.
-                </p>
-                <p class="psy_in_our_life__p">
-                    Это здание находится на пересечении ул. Мясницкой и Большого Козловского переулка. Вам необходимо
-                    войти во двор со стороны Большого Козловского переулка, далее 10 метров прямо (ориентир Клуб «Pur
-                    Pur”) и повернуть направо (внутрь двора). В левом углу двора Вы увидите внешнюю лестницу, с красными
-                    поручнями, ведущую на второй этаж. Вам необходимо подняться до конца лестницы и войти в здание.
-                    Далее поднимитесь на один лестничный пролет, до белой двери с нашей табличкой.
-                </p>
-                <div class="conts is-size-4">
-                    <div class="conts_wrap"> <span class="conts__span">Телефон</span>
-                        +7 965 104 06 07
-                    </div>
-                    <div class="conts_wrap"> <span class="conts__span">E-mail:</span>
-                        n.chizhikova25@gmail.com
-                    </div>
-                    <div class="conts_wrap"> <span class="conts__span">Время работы:</span>
-                       ежедневно, с 11:00 до 21:00
-                    </div>
-                    <div class="conts_wrap"> <span class="conts__span">Координаты для навигатора: </span>
-                       55.768248, 37.644746
-                    </div>
+    <div class="kont_adress__map columns">
+        <div class="kont_adress__map_wrap column is-5-desktop">
+            <iframe
+                src="https://yandex.ru/map-widget/v1/?um=constructor%3A39a350423f98fbc4417a6c1fff02949b752fa3d557f94b4a755f0324a7bce17d&amp;source=constructor"
+                width="400" height="503" frameborder="0"></iframe></div>
+        <div class="kont_adress__map__text column is-size-5">
+            <p class="psy_in_our_life__p ">
+                Данный кабинет располагается в психологическом центре «Мастерская жизни» в 1-й минуте ходьбы от
+                станции метро Красные Ворота и в 4-х минутах пешком от станций метро Тургеневская, Чистые Пруды,
+                Сретенский Бульвар.
+            </p>
+            <p class="psy_in_our_life__p">
+                Это здание находится на пересечении ул. Мясницкой и Большого Козловского переулка. Вам необходимо
+                войти во двор со стороны Большого Козловского переулка, далее 10 метров прямо (ориентир Клуб «Pur
+                Pur”) и повернуть направо (внутрь двора). В левом углу двора Вы увидите внешнюю лестницу, с красными
+                поручнями, ведущую на второй этаж. Вам необходимо подняться до конца лестницы и войти в здание.
+                Далее поднимитесь на один лестничный пролет, до белой двери с нашей табличкой.
+            </p>
+            <div class="conts is-size-5">
+                <div class="conts_wrap"> <span class="conts__span">Телефон</span>
+                    +7 965 104 06 07
+                </div>
+                <div class="conts_wrap"> <span class="conts__span">E-mail:</span>
+                    n.chizhikova25@gmail.com
+                </div>
+                <div class="conts_wrap"> <span class="conts__span">Время работы:</span>
+                    ежедневно, с 11:00 до 21:00
+                </div>
+                <div class="conts_wrap"> <span class="conts__span">Координаты для навигатора: </span>
+                    55.768248, 37.644746
                 </div>
             </div>
-
         </div>
 
-   
+    </div>
+
+
     <!-- здесь заканчивается меняющийся контент -->
 
 
