--- a/alter_app/materials.html
+++ b/alter_app/materials.html
@@ -101,7 +101,7 @@
             <ul class="method_first__list column">
                 <li>подавленность;</li>
                 <li>тоска;</li>
-                <li>тревожность</li>
+                <li>тревожность;</li>
                 <li>потеря интереса к любимым занятиям;</li>
                 <li>чувство безнадёжности; </li>
                 <li>проблемы с концентрацией внимания;</li>
@@ -128,7 +128,7 @@
             Однако депрессия — это заболевание, так же как панкреатит или воспаление лёгких, а не слабость или черта
             характера. Оно не пройдёт само собой, как не пройдёт сломанная рука или нога.
         </p>
-        <h5 class="psy_in_our_life__h5 second_head">
+        <h5 class="psy_in_our_life__h3 psy_in_our_life__h3__marg is-size-4  ">
             Как вести себя с человеком, у которого вы подозреваете депрессию?
         </h5>
         <p class="psy_in_our_life__p">
