--- a/alter_app/method.html
+++ b/alter_app/method.html
@@ -135,17 +135,17 @@
             </div>
         </div>
     </div>
-    <div class="method_wrapper_fourth columns is-size-5-desktop is-centered">
+    <div class="method_wrapper_fourth columns is-centered">
 
         <div class="method_three_methods column">
         </div>
 
         <div class="method_three_methods_second column is-text-left">
-            <h5 class="method_three_methods__h5 is-size-4 desktop  ">
-                Три основных принципа <br>
+            <h5 class="method_three_methods__h5 is-size-3 desktop">
+               <div>Три основных принципа </div>
                 когнитивно-поведенческой психотерапии:
             </h5>
-            <ul class="method_first__list is-size-4 ">
+            <ul class="method_first__list is-size-4">
                 <li>наши мысли влияют на наше поведение;</li>
                 <li>мы можем развить навык отслеживания мыслей и работать над их изменением;</li>
                 <li>изменив мышление, можно изменить что-либо в поведении. </li>
