--- a/alter_app/about.html
+++ b/alter_app/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="сайт психолога Натальи Чижиковой">
@@ -66,7 +65,7 @@
 
 
     <!-- здесь начинается меняющийся контент -->
-    <div class="wrapper_about_me_first is-size-5-desktop is-centered">
+    <div class="wrapper_about_me_first is-size-5-desktop ">
         <h2 class="psy_in_our_life__h3 title">Обо мне</h2>
         <p class="psy_in_our_life__p">
             В данный момент я веду частную практику, работаю как клинический психолог и психотерапевт. В своей работе я
@@ -287,10 +286,10 @@
             <div class="row_img__first column">
                 <a href="img\od\school_psyc.jpeg" class="psy_img">
                     <div class="img_wp fr-9"></div>
-                    </a>
-                    <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
-                    <span class="row_img_first_mpgu"> Всероссийский педагогический МАРАФОН учебных предметов </span>
-                    <span class="row_img__first__span">Сертификат участника мастер-классов</span>
+                </a>
+                <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+                <span class="row_img_first_mpgu"> Всероссийский педагогический МАРАФОН учебных предметов </span>
+                <span class="row_img__first__span">Сертификат участника мастер-классов</span>
             </div>
         </div>
         <div class="row_img row_img_second columns">
@@ -304,13 +303,14 @@
                 <span class="row_img__first__span">Сертификат участия в конференции </span>
             </div>
             <div class="row_img__first column is-one-third">
-                    <a href="img/od/kpt_13.jpeg" class="psy_img">
-                        <div class="img_wp fr-22"></div>
-                    </a>
-                    <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
-                    <span class="row_img_first_mpgu">VI съезд детских онкологов России с международным участием «Достижения и перспективы детской онкологии»</span>
-                    <span class="row_img__first__span">Участник съезда </span>
-                </div>
+                <a href="img/od/kpt_13.jpeg" class="psy_img">
+                    <div class="img_wp fr-22"></div>
+                </a>
+                <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+                <span class="row_img_first_mpgu">VI съезд детских онкологов России с международным участием «Достижения
+                    и перспективы детской онкологии»</span>
+                <span class="row_img__first__span">Участник съезда </span>
+            </div>
         </div>
     </div>
 
