--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -44,7 +44,6 @@
                 <a href="psychotherapy.html" class="navbar-item">
                     о психотерапии
                 </a>
-
                 <a href="method.html" class="navbar-item">
                     о подходе
                 </a>
@@ -65,11 +64,10 @@
         <div class="column">
             <div class="wrapper_intro__img">
             </div>
-            <div class="wrapper_intro__text is-size-4-desktop is-center">
+            <div class="wrapper_intro__text is-size-4 has-text-centered">
                 <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
                 <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное –
-                    решить
-                    ее.</p>
+                    решить ее.</p>
             </div>
         </div>
     </div>
@@ -96,7 +94,7 @@
         </div>
     </div>
     <div class="column is-full">
-        <h2 class="wrapper_reasons_to_me__h2 is-size-4-desktop   has-text-centered">Причины, по которым вам имеет смысл обратиться именно
+        <h2 class="wrapper_reasons_to_me__h2 is-size-4 has-text-centered">Причины, по которым вам имеет смысл обратиться именно
             ко мне:</h2>
     </div>
     <div class="wrapper_reasons_to_me columns">
