--- a/alter_app/about.html
+++ b/alter_app/about.html
@@ -203,7 +203,7 @@
         <h6 class="academic__h6 h6_first centr subtitle is-centred is-4-desktop">Базовое образование</h6>
         <div class="row_img columns">
             <div class="row_img__first column">
-                <a href="img/about_diplom_bachelor-min.png" class="psy_img">
+                <a href="img/about_diplom_bachelor-min.png"  >
                     <div class="img_wp fr-1"></div>
                 </a>
                 <span class="row_img__first__span">Базовое образование</span>
@@ -211,7 +211,7 @@
                 <span class="row_img__first__span">Получение квалификации «Социальный психолог», «Психолог». </span>
             </div>
             <div class="row_img__first column">
-                <a href="img\rnimy_big.jpeg" class="psy_img">
+                <a href="img\rnimy_big.jpeg"  >
                     <div class="img_wp fr-2"></div>
                 </a>
                 <span class="row_img__first__span">Базовое образование</span>
@@ -219,7 +219,7 @@
                 <span class="row_img__first__span">Получение квалификации «Клинический психолог»</span>
             </div>
             <div class="row_img__first column">
-                <a href="img\magister_big.jpeg" class="psy_img">
+                <a href="img\magister_big.jpeg"  >
                     <div class="img_wp fr-3"></div>
                 </a>
                 <span class="row_img__first__span">Базовое образование</span>
@@ -234,7 +234,7 @@
         <h6 class="academic__h6 h6_first centr title is-centred is-4-desktop">Участие в конференциях</h6>
         <div class="row_img columns">
             <div class="row_img__first column">
-                <a href="img\od\study_lesson.jpeg" class="psy_img">
+                <a href="img\od\study_lesson.jpeg">
                     <div class="img_wp fr-4"></div>
                 </a>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ </span>
@@ -242,7 +242,7 @@
                 <span class="row_img__first__span"> Диплом 1 степени </span>
             </div>
             <div class="row_img__first column">
-                <a href="img\od\conf_vigot.jpeg" class="psy_img">
+                <a href="img\od\conf_vigot.jpeg">
                     <div class="img_wp fr-5"></div>
                 </a>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
@@ -251,7 +251,7 @@
                 <span class="row_img__first__span"> Сертификат участия в конференции </span>
             </div>
             <div class="row_img__first column">
-                <a href="img\od\lomonosov_2016.jpeg" class="psy_img">
+                <a href="img\od\lomonosov_2016.jpeg">
                     <div class="img_wp fr-6"></div>
                 </a>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
@@ -263,7 +263,7 @@
 
         <div class="row_img columns">
             <div class="row_img__first column">
-                <a href="img\od\lomosov-2017_sert.jpeg" class="psy_img">
+                <a href="img\od\lomosov-2017_sert.jpeg">
                     <div class="img_wp fr-8"></div>
                 </a>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
@@ -273,7 +273,7 @@
                 <span class="row_img__first__span">Сертификат участия в конференции</span>
             </div>
             <div class="row_img__first column">
-                <a href="img\od\lomosov-2017_sert.jpeg" class="psy_img">
+                <a href="img\od\lomosov-2017_sert.jpeg">
                     <div class="img_wp fr-7"></div>
                 </a>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
@@ -284,7 +284,7 @@
             </div>
 
             <div class="row_img__first column">
-                <a href="img\od\school_psyc.jpeg" class="psy_img">
+                <a href="img\od\school_psyc.jpeg">
                     <div class="img_wp fr-9"></div>
                 </a>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
@@ -294,7 +294,7 @@
         </div>
         <div class="row_img row_img_second columns">
             <div class="row_img__first column is-one-third">
-                <a href="img\od\rpp.png" class="psy_img">
+                <a href="img\od\rpp.jpg">
                     <div class="img_wp fr-10"></div>
                 </a>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
@@ -303,7 +303,7 @@
                 <span class="row_img__first__span">Сертификат участия в конференции </span>
             </div>
             <div class="row_img__first column is-one-third">
-                <a href="img/od/kpt_13.jpeg" class="psy_img">
+                <a href="img/od/kpt_13.jpeg">
                     <div class="img_wp fr-22"></div>
                 </a>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
@@ -319,7 +319,7 @@
         <h6 class="academic__h6 h6_first centr subtitle is-centred is-4-desktop">Базовое образование</h6>
         <div class="row_img columns">
             <div class="row_img__first column">
-                <a href="img/kpt/dpdg.jpeg" class="psy_img">
+                <a href="img/kpt/dpdg.jpeg">
                     <div class="img_wp fr-11"></div>
                 </a>
                 <span class="row_img__first_span">ПОВЫШЕНИЕ КВАЛИФИКАЦИИ</span>
@@ -328,7 +328,7 @@
                 <span class="row_img__first__span"> от Общероссийской психотерапевтической лиги</span>
             </div>
             <div class="row_img__first column">
-                <a href="img\kpt\kpt_1.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_1.jpeg">
                     <div class="img_wp fr-12"></div>
                 </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
@@ -336,7 +336,7 @@
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
             </div>
             <div class="row_img__first column">
-                <a href="img\kpt\kpt_1.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_1.jpeg">
                     <div class="img_wp fr-13"></div>
                 </a>
                 <span class="row_img__first_span">УЧАСТИЕ В СЕМИНАРЕ</span>
@@ -346,7 +346,7 @@
         </div>
         <div class="row_img row_img_second columns">
             <div class="row_img__first column">
-                <a href="img\kpt\kpt_3.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_3.jpeg">
                     <div class="img_wp fr-14"></div>
                 </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
@@ -355,7 +355,7 @@
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
             </div>
             <div class="row_img__first column">
-                <a href="img\kpt\kpt_4.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_4.jpeg">
                     <div class="img_wp fr-15"></div>
                 </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
@@ -363,7 +363,7 @@
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
             </div>
             <div class="row_img__first column">
-                <a href="img\kpt\kpt_5.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_5.jpeg">
                     <div class="img_wp fr-16"></div>
                 </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
@@ -375,7 +375,7 @@
         <div class="row_img row_img_second columns">
 
             <div class="row_img__first column">
-                <a href="img\kpt\kpt_6.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_6.jpeg">
                     <div class="img_wp fr-17"></div>
                 </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
@@ -383,7 +383,7 @@
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
             </div>
             <div class="row_img__first column">
-                <a href="img\kpt\kpt_7.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_7.jpeg"  >
                     <div class="img_wp fr-18"></div>
                 </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
@@ -391,7 +391,7 @@
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
             </div>
             <div class="row_img__first column">
-                <a href="img\kpt\kpt_8.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_8.jpeg">
                     <div class="img_wp fr-19"></div>
                 </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
@@ -402,7 +402,7 @@
         <div class="row_img row_img_second columns">
 
             <div class="row_img__first column is-one-third">
-                <a href="img\kpt\kpt_9.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_9.jpeg"  >
                     <div class="img_wp fr-20"></div>
                 </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
@@ -410,7 +410,7 @@
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
             </div>
             <div class="row_img__first column is-one-third">
-                <a href="img\kpt\kpt_10.jpeg" class="psy_img">
+                <a href="img\kpt\kpt_10.jpeg">
                     <div class="img_wp fr-21"></div>
 
                 </a>
@@ -419,7 +419,7 @@
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
             </div>
             <div class="row_img__first column is-one-third">
-                <a href="img\kpt\kpt13.jpg" class="psy_img">
+                <a href="img\kpt\kpt13.jpg">
                     <div class="img_wp fr-23"></div>
 
                 </a>
