--- a/alter_app/contacts.html
+++ b/alter_app/contacts.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="сайт психолога Натальи Чижиковой">
@@ -68,9 +67,9 @@
 
     <!-- здесь начинается меняющийся контент -->
 
-    <div class="first_contact columns is-size-5-desktop is-centered">
+    <div class="first_contact columns is-size-5 is-centered">
         <div class="column">
-            <h3 class="psy_in_our_life__h3 psy_in_our_life__h3_cont  is-size-3-desktop is-centered title column">Как
+            <h3 class="psy_in_our_life__h3 psy_in_our_life__h3_cont  is-size-3-desktop  title column">Как
                 проходит первый сеанс?</h3>
             <p class="psy_in_our_life__p">
                 Первая встреча — это всегда знакомство. Обычно я рекомендую новым клиентам перед первой встречей
