--- a/alter_app/psychotherapy.html
+++ b/alter_app/psychotherapy.html
@@ -66,8 +66,7 @@
 
     <!-- здесь начинается меняющийся контент -->
     <div class="columns psy_first_wrapper">
-
-        <div class=" is-size-5-desktop column is-centered">
+        <div class=" is-size-5-desktop column">
             <h3 class="psy_in_our_life__h3 title">Психотерапия в нашей жизни</h3>
             <p class="psy_in_our_life__p">
                 Современное российское общество устроено парадоксально. У нас принято обсуждать свою «несчастную долю»
@@ -118,7 +117,7 @@
         </div>
     </div>
         <div class="columns psy_first_wrapper">
-    <div class="is-size-5-desktop column is-centered">
+    <div class="is-size-5 column is-centered">
         <h3 class="psy_in_our_life__h3 title">Кто же такой психотерапевт? </h3>
         <p class="psy_in_our_life__p">
             Психотерапевт — это человек, который долго учился, чтобы помогать людям справляться со своими негативными (и
@@ -150,8 +149,6 @@
 </div>
 
     <div class="psy_third_wrapper"></div>
-
-
 
     <!-- здесь заканчивается меняющийся контент -->
     <footer>
