--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+ 
+    ym(53379829, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true
+    });
+ </script>
+ <noscript><div><img src="https://mc.yandex.ru/watch/53379829" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+ <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="description" content="сайт психолога Натальи Чижиковой">
     <meta name="keywords" content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
@@ -15,6 +29,7 @@
     <script src="js/jquery.js" defer></script>
     <script src="js/mag.js" defer></script>
     <script src="js/code.js" defer></script>
+    <meta name="yandex-verification" content="7af08bf7ced9261a" />
 </head>
 <body>
     <div class="columns">
@@ -104,7 +119,7 @@
             <div class="wrapper_reasons_to_me_text__p">
                 <div>Депрессивные состояния;</div>
                 <div>Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);</div>
-                <div>Панические атаки.s </div>
+                <div>Панические атаки. </div>
             </div>
         </div>
         <div class="wrapper_reasons_to_me__card column">
